# cpp-tasks

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
src/task1/: QueryEngine.cpp  QueryEngine.hpp  main.cpp
src/task2/: Collision.cpp  Collision.hpp  main.cpp
src/task3/: Calculate.hpp  main.cpp
tests/: test_task1.cpp  test_task3.cpp
